# rust-gpu-compute-example

./: Cargo.toml  README.md  build.rs
kernels/compute/: Cargo.toml
kernels/compute/src/: lib.rs
shared/: Cargo.toml
shared/src/: lib.rs
src/: main.rs
