[package]
name = "rustic"
version = "0.1.0"
authors = ["Pema Malling <pemamalling@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = { version = "0.3", default-features = false, features = ["std", "executor"] }
wgpu = "0.9"
bytemuck = "1.7.2"
shared = { "path" = "shared" }

[build-dependencies]
spirv-builder = { git = "https://github.com/EmbarkStudios/rust-gpu" }