[package]
name = "rustic"
version = "0.1.0"
authors = ["Pema Malling <pemamalling@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shared = { "path" = "shared" }
futures = { version = "0.3", default-features = false, features = ["std", "executor"] }
wgpu = "0.9"
spirv-std = { git = "https://github.com/EmbarkStudios/rust-gpu", features = ["glam"] }

[build-dependencies]
spirv-builder = { git = "https://github.com/EmbarkStudios/rust-gpu" }